# CPP-DateTime-library

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  datetime.cbp  datetime.cpp  datetime.depend  datetime.layout  datetime.sln  datetime.vcxproj  datetime.vcxproj.filters  main.cpp  timespan.cpp
.github/workflows/: cmake.yml  sync-to-azure-devops.yml
Source/: datetime.cpp  timespan.cpp
cmake/: CMakeUninstall.cmake.in  datetimeConfig.cmake.in
cmake/modules/: VersionResource.rc  generate_product_version.cmake
include/: datetime.h  timespan.h
src/: datetime.cpp  datetime.h  timespan.cpp  timespan.h
test/datetime_unittest/: datetime_unittest.cpp  datetime_unittest.cpp~RF4efe7816.TMP  datetime_unittest.vcxproj  datetime_unittest.vcxproj.filters  main.cpp  timespan_unittest.cpp
test/migrate_unittest/: test_case.cpp
